[gd_scene load_steps=3 format=3 uid="uid://cks60ah1lax5x"]

[ext_resource type="Texture2D" uid="uid://dtlaecsmhw5as" path="res://Images/Border.png" id="1_0k83j"]
[ext_resource type="Script" path="res://Scripts/layer_name.gd" id="1_hc7ef"]

[node name="LayerName" type="MarginContainer"]
offset_top = -87.0
offset_right = 65.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
script = ExtResource("1_hc7ef")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
vertical_alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -24.0
offset_right = 30.0
offset_bottom = 24.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("1_0k83j")
region_rect = Rect2(16, 16, 992, 992)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="resized" from="Label" to="." method="_on_label_resized"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
